ship co-op system

--- a/config.json
+++ b/config.json
@@ -306,6 +306,36 @@
             "admin"
         ]
     },
+    "coop": {
+        "regions": {
+            "938125906839498794": {
+                "role": "805458032922329117",
+                "helper": "931412474622799902"
+            },
+            "938125996354306118": {
+                "role": "805458032929538059",
+                "helper": "931412465147854939"
+            },
+            "938126052432175146": {
+                "role": "805458032922329116",
+                "helper": "931412476803817542"
+            },
+            "938126100989616250": {
+                "role": "805458032922329115",
+                "helper": "931412479379111936"
+            }
+        },
+        "wl": [
+            "931413525610496041",
+            "931413525530808330",
+            "931413524650016770",
+            "931413523983126528",
+            "931413520879349840",
+            "931413519868518411",
+            "931413519151267910",
+            "931413513749008474"
+        ]
+    },
     "support_anchor": "903686165792706580",
     "support_roles": {
         "817617933495697469": {
@@ -326,6 +356,7 @@
         "application_logs": "936316553912270880",
         "boost_count": "829803392447545404",
         "boosts": "808065247260704839",
+        "coop": "921110101144780860",
         "logs": "922888612054454302",
         "member_count": "927057269064085504",
         "message_logs": "922671895495733278",
