--- a/src/modules/help/helptext.yml
+++ b/src/modules/help/helptext.yml
@@ -36,6 +36,7 @@ text:
             `nukeguard` - Anti-nuking features
             `polls` - Poll-related commands
             `reactroles` - Self-assignable reaction roles
+            `reminders` - Reminders
             `settings` - Bot settings
             `starboard` - Starboard
             `statschannels` - Server stats channels like member count and boosters
@@ -619,6 +620,34 @@ text:
         body: >
             Reaction roles allow a user to assign themselves roles by clicking a button, such as server region roles or pronoun roles. Use `{prefix}setup-react-roles` to
             initiate the process, and the bot will guide you through the process (please use <#841866382840561705> for this as it generates a lot of messages).
+    reminders:
+        title: Reminders
+        body: >
+            Set reminders for yourself for the future.
+
+
+            Commands in this module: `remind`, `reminders`, `rm-remind`
+    remind:
+        title: Add Reminder
+        body: >
+            `{prefix}remind <duration> [content]`
+
+
+            Remind you after the specified duration, optionally specifying a message to include. The reminder will link back to where you called the command.
+    reminders:
+        title: List Reminders
+        body: >
+            `{prefix}reminders`
+
+            
+            List all of your reminders.
+    rm-remind:
+        title: Remove Reminder
+        body: >
+            `{prefix}rm-remind <id>`
+
+
+            Remove a reminder by its ID (shown when you set the reminder and when you list reminders with `{prefix}reminders`). This reminder must belong to you.
     settings:
         title: Bot Settings
         body: >
