--- a/src/modules/help/helptext.yml
+++ b/src/modules/help/helptext.yml
@@ -18,6 +18,9 @@ aliases:
     find-user: find
     find-role: find
     find-channel: find
+    user-info: info
+    role-info: info
+    channel-info: info
 text:
     __all:
         title: Shenhe Bot Help
@@ -809,7 +812,8 @@ text:
         body: >
             Useful commands for things like showing info or other uncategorized commands that don't belong to the `fun` module.
 
-            Commands in this module: `ranks`, `reload-config`, `clone`, `webhook`, `point`, `find`, `find-user`, `find-role`, `find-channel`
+            Commands in this module: `ranks`, `reload-config`, `clone`, `webhook`, `point`, `find`, `find-user`, `find-role`, `find-channel`, `info`,
+            `user-info`, `role-info`, `channel-info`
     ranks:
         title: Show Ranks
         body: >
@@ -864,6 +868,16 @@ text:
 
             Find a user, role, or channel by name. Requires at least three characters to search. `{prefix}find-user`, `{prefix}find-role`, or
             `{prefix}find-channel` to filter for a specific category.
+    info:
+        title: Server / User / Role / Channel Info
+        body: >
+            `{prefix}info [item]`
+
+
+            Get info on a user, role, channel, or the server. To get info on the server, just run `{prefix}info` with no argument. `{prefix}user-info`,
+            `{prefix}role-info`, and `{prefix}channel-info` will actually work on other types of items, but if you pass no argument to them, `{prefix}user-info`
+            will default to yourself, `{prefix}role-info` will default to your top role, and `{prefix}channel-info` will default to the channel you used the
+            command in.
     verification:
         title: CAPTCHA Verification System
         body: >
