add push between

--- a/config.json
+++ b/config.json
@@ -168,6 +168,10 @@
             "mod",
             "tcmod"
         ],
+        "bulkpurge": [
+            "owner",
+            "admin"
+        ],
         "slowmode": [
             "owner",
             "admin",
