add automod ignore

--- a/config.json
+++ b/config.json
@@ -389,6 +389,9 @@
         "943549074131537950",
         "939295929121513472"
     ],
+    "automod_ignore": [
+        "944066507468570664"
+    ],
     "db_options": {
         "user": "shenhe",
         "host": "localhost",
