no more kicking for trials either

--- a/config.json
+++ b/config.json
@@ -139,8 +139,7 @@
             "admin",
             "bot",
             "mod",
-            "tcmod",
-            "trial"
+            "tcmod"
         ],
         "ban": [
             "owner",
