--- a/config.json
+++ b/config.json
@@ -363,6 +363,7 @@
         "modmail_logs": "911071731265986560",
         "suggestions": "805458033471782974",
         "watchlist": "899332321583464478",
+        "perspective": "948453474134290462",
         "private_starboard": "937177440311189544",
         "public_starboard": "805603604408827934",
         "welcome": "890252868135825408"
