revert mod chat and grant highlight to retired

--- a/config.json
+++ b/config.json
@@ -116,6 +116,12 @@
             "ids": [
                 "838116854866116608"
             ]
+        },
+        "retired": {
+            "level": 0,
+            "ids": [
+                "912509114704363520"
+            ]
         }
     },
     "permissions": {
@@ -302,7 +308,8 @@
             "tc",
             "media",
             "leak",
-            "staff"
+            "staff",
+            "retired"
         ],
         "info": [
             "owner",
@@ -367,7 +374,7 @@
         "logs": "922888612054454302",
         "member_count": "927057269064085504",
         "message_logs": "922671895495733278",
-        "mod": "912889743648370688",
+        "mod": "841857695265980466",
         "modmail_category": "913215273996259380",
         "modmail_logs": "911071731265986560",
         "suggestions": "805458033471782974",
